...
        containerColor = AppCanvasBackground,
        snackbarHost = { SnackbarHost(snackbarHostState) },
        topBar = {
            TopAppBar(
                title = {
                    Text(
                        text = "Audio Editor & Mixer",
                        fontSize = 18.sp,
                        fontWeight = FontWeight.Bold,
                        color = DeepNavyDisplay
                    )
                },
                navigationIcon = {
...
